--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <meta property="og:locale" content="en" />
     <meta property="og:locale:alternate" content="fa" />
     <title>Sattarian twins website!</title>
+    <link
+      type="text/css"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/rastikerdar/vazir-font@v26.0.2/dist/font-face.css"
+    />
     <link rel="stylesheet" href="src/style.css" />
     <link
       rel="shortcut icon"
