--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <article>
           <span class="logo"></span>
           <h2 class="firstname en" id="hassan">
-            <a href="#">Mohammad Hassan</a>
+            <a href="https://hassan.mhsattarian.com">Mohammad Hassan</a>
           </h2>
-          <h2 class="firstname fa"><a href="#">محمد حسن</a></h2>
+          <h2 class="firstname fa"><a href="https://hassan.mhsattarian.com">محمد حسن</a></h2>
           <span class="and en">&</span>
           <span class="and fa">و</span>
           <h2 class="firstname en" id="hossein">
