--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       type="image/x-icon"
       href="/src/assets/logo-dark.png"
     />
+    <script async src="https://cdn.splitbee.io/sb.js"></script>
   </head>
 
   <body class="light">
